--- a/CA210317/CA210317.csproj
+++ b/CA210317/CA210317.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="RES\feladatok5.pdf" />
+    <None Include="RES\vezerlo_szerkezetek_prezi_v3.pdf" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
